# uni

Sem.2/BS Lab/BS_Lab_1/: Listen_ports.sh
Sem.2/BS Lab/BS_Lab_2/linux_module/: Makefile  linux_module.ko  modules.order
Sem.2/BS Lab/BS_Lab_3/IPC_Benchmarks/: Makefile  bench_mmap  bench_mmap.c  bench_pipe  bench_pipe.c  bench_rdtsc  bench_rdtsc.c  bench_signal  bench_utils.h  results_mmap.csv  results_pipe.csv  tsc.c
Sem.2/Mathe 2 Lab/Mathe labor/: Abd_Rabba_Ahmed_771439 (2).ipynb  Abd_Rabba_Ahmed_771439.ipynb  Ahmed_Abd_Rabba_771439 (1).ipynb  Ahmed_Abd_Rabba_771439.ipynb  Idris_Wahib_769064.ipynb  Mathe 2.ipynb  Testat2.ipynb  Untitled.ipynb  Vorbereitung.ipynb  car.ipynb  car2.ipynb  swingboat_with_notes.ipynb
Sem.2/Mathe 2 Lab/Mathe labor/Car python/: car.ipynb  car2.ipynb
Sem.2/Mathe 2 Lab/Mathe labor/Dateien für Projekt Swing Boat-20231129/: swingboat1.ipynb
Sem.2/Mathe 2 Lab/Mathe labor/probe/: Probetestat_1_1.ipynb  Probetestat_1_2.ipynb  (+3 more)
Sem.2/Mathe 2 Lab/Testat2/: animation_save_test.html  swingbubu.ipynb  testat2_1.ipynb  testat2_2.ipynb
Sem.2/OOS 1 Lab/: Lab00  Lab00.cpp  Lab01.cpp  Lab02  Lab02.cpp  Lab03.cpp  Lab04.cpp  Lab05  Lab05.cpp  Lab06.cpp  Lab07.cpp  Lab08.cpp  Lab09.cpp  Lab10.cpp  Lab11.cpp  Lab12.cpp  Lab15.cpp  Lab16.cpp  Lab17.cpp  Lab18.cpp  Lab19.cpp  Lab20.cpp  Lab21.cpp  Lab22.cpp  Lab23.cpp  Lab24.cpp
Sem.2/OOS 1 Lab/Lab13/: CMakeLists.txt  Employee.cpp  Employee.h  Manager.h  Worker.cpp  Worker.h  main  main.cpp
Sem.2/OOS 1 Lab/Lab14/: CMakeLists.txt  CMakePresets.json  Employee.cpp  Manager.cpp  Worker.cpp  main.cpp
(+12 files in other folders)
